--- a/RadDiagramSample/RadDiagramSample.csproj
+++ b/RadDiagramSample/RadDiagramSample.csproj
@@ -142,15 +142,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\DesignerView.xaml">
+    <Page Include="Views\DesignerShell.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\DesignerView.xaml.cs">
-      <DependentUpon>DesignerView.xaml</DependentUpon>
+    <Compile Include="Views\DesignerShell.xaml.cs">
+      <DependentUpon>DesignerShell.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\Toolbox.xaml">
